--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="%PUBLIC_URL%/css/bootstrap.css" id="bootstrap-css-link" rel="stylesheet">
-  <meta name="theme-color" content="#000000" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <title>React App Example</title>
+  <title>React Area Example</title>
 </head>
 <body>
   <div id="root"></div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  <script>
-    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-    var tooltipList = tooltipTriggerList.map(
-      function (tooltipTriggerEl) {
-        return new bootstrap.Tooltip(tooltipTriggerEl);
-      }
-    )
-  </script>
 </body>
 </html>
